# taxi_weather_analysis

./: .dockerignore  .env.example  .gitignore  README.md  docker-compose.prod.yml  docker-compose.yml  main.py  pyproject.toml  task.md
docker/: Dockerfile.etl
docs/: STTM.xlsx  docker_environments.md  implementation_report.md  raport_finalny.md
geo/: taxi_zones.geojson
src/db/: connection.py  schema.sql
src/ingest/: logging_config.py  taxi_ingest.py  weather_ingest.py  zone_ingest.py
src/quality/: checks.py
src/reporting/: metabase_setup.py  prepare_geojson.py  render.py  views.sql
src/transform/: dimensions.py  pipeline.py  scd_simulation.py
tests/: conftest.py  test_reporting.py  test_scd2.py  test_scd_simulation.py
