[project]
name = "weather-vs-taxi-trips"
version = "0.1.0"
description = "Data warehouse integrating NYC yellow taxi trips with weather data (PySpark ETL, PostgreSQL fact constellation, Tableau BI)"
readme = "README.md"
requires-python = ">=3.12, <3.13"
dependencies = [
    "pandas>=3.0.3",
    "psycopg2-binary>=2.9.12",
    "pydantic>=2.0.0",
    "pyspark>=4.1.1",
    "requests>=2.34.2",
    "pyarrow>=24.0.0",
    "holidays>=0.98",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=6.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.uv]
required-environments = [
    "sys_platform == 'darwin'",
    "sys_platform == 'linux' and platform_machine == 'aarch64'",
    "sys_platform == 'linux' and platform_machine == 'x86_64'"
]
